--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html class="no-js" lang="en">
   <head>
-    <title>Blogger.com - Create a unique and beautiful blog. It’s easy and free.</title>
+    <title>Sumit Mishra</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1.0, user-scalable=no" name="viewport">
