--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   </head>
   <body>
     <h1> Coming soon</h1>
-    <h2> This site is for upcoming Mishra group of industries</h2>
+    <h2> This site is for upcoming "Mishra group of industries"</h2>
+    <img src=”C:\Users\Public\Pictures\Sample Pictures\pp.jpg”>
+ 
   </body>
 </html>
