--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <h1> Coming soon</h1>
     <h2> This site is for upcoming "Mishra group of industries"</h2>
-    <img src=”C:\Users\Public\Pictures\Sample Pictures\pp.jpg”>
+    <img src=”C:\Users\Public\Pictures\Sample Pictures\pp.jpg” height=50% width=35%>
  
   </body>
 </html>
