--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <h1> Coming soon</h1>
     <h2> This site is for upcoming "Mishra group of industries"</h2>
-    <img src=”https://www.google.com/imgres?imgurl=https%3A%2F%2Fcdn.pixabay.com%2Fphoto%2F2015%2F04%2F19%2F08%2F32%2Fmarguerite-729510__480.jpg&imgrefurl=https%3A%2F%2Fpixabay.com%2Fimages%2Fsearch%2Fflowers%2F&tbnid=YJ41ekDgpd2x2M&vet=12ahUKEwi87b6H-v30AhWm5TgGHQONCJgQMygDegUIARDXAQ..i&docid=6QnaOLvEQovLfM&w=737&h=480&itg=1&q=flower&ved=2ahUKEwi87b6H-v30AhWm5TgGHQONCJgQMygDegUIARDXAQ.jpg” height=100% width=70%>
+    <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fcdn.pixabay.com%2Fphoto%2F2015%2F04%2F19%2F08%2F32%2Fmarguerite-729510__480.jpg&imgrefurl=https%3A%2F%2Fpixabay.com%2Fimages%2Fsearch%2Fflowers%2F&tbnid=YJ41ekDgpd2x2M&vet=12ahUKEwi87b6H-v30AhWm5TgGHQONCJgQMygDegUIARDXAQ..i&docid=6QnaOLvEQovLfM&w=737&h=480&itg=1&q=flower&ved=2ahUKEwi87b6H-v30AhWm5TgGHQONCJgQMygDegUIARDXAQ.jpg" height=100% width=70%>
  
   </body>
 </html>
