--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <h1> Coming soon</h1>
     <h2> This site is for upcoming "Mishra group of industries"</h2>
-    <img src="https://images.pexels.com/photos/56866/garden-rose-red-pink-56866.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" height=75% width=70%>
+    <img src="C:\Users\Public\Pictures\Sample Pictures\pp" height=75% width=70%>
  
   </body>
 </html>
