--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <h1> Coming soon</h1>
     <h2> This site is for upcoming "Mishra group of industries"</h2>
-    <img src="C:\Users\Public\Pictures\Sample Pictures\pp" height=75% width=70%>
+    <img src="https://www.nawpic.com/media/2020/hacker-nawpic-20.jpg" height=657% width=328%>
  
   </body>
 </html>
