--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1> Coming soon</h1>
-    <h2> This site is for upcoming "Mishra group of industries"</h2>
+   <center> <h2> This site is for upcoming "Mishra group of industries"</h2></center>
     <img src="https://www.nawpic.com/media/2020/hacker-nawpic-20.jpg" height=100% width=70%>
  
   </body>
