--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <title> Sumit MIshra</title>
   </head>
   <body>
-    <h1> Coming soon</h1>
-   <center> <h2> This site is for upcoming "Mishra group of industries"</h2></center>
-    <img src="https://www.nawpic.com/media/2020/hacker-nawpic-20.jpg" height=100% width=70%>
+    <center><h1> Coming soon</h1>
+    <h2> This site is for upcoming "Mishra group of industries"</h2></center>
+    <img src="https://www.nawpic.com/media/2020/hacker-nawpic-20.jpg" height=100% width=60%>
  
   </body>
 </html>
